--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ./jenkins
       dockerfile: Dockerfile
     container_name: jenkins
+    user: root
     ports:
       - "8080:8080"
       - "50000:50000"
