Make repo URL/branch configurable via env; update compose and JCasC

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,6 @@ IMAGE_REPO=your-dockerhub-namespace/ci-cd-app
 # Kubernetes namespace to deploy
 KUBE_NAMESPACE=default
 
+# Repository to poll (override if needed)
+APP_REPO_URL=https://github.com/samueltatapudi-dev/CI_CD_APP_VERSION
+APP_REPO_BRANCH=main
