Avoid SonarQube container name conflict: use sonarqube-ci and update references

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,9 @@ services:
     depends_on:
       - sonarqube
 
-  sonarqube:
+  sonarqube-ci:
     image: sonarqube:10.3-community
-    container_name: sonarqube
+    container_name: sonarqube-ci
     depends_on:
       - sonardb
     environment:
